# Snake-Game-C-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GameTestC__  Makefile  cmake_install.cmake  main.cpp
src/: const.hpp  direction.hpp  fruit.hpp  game.cpp  game.hpp  snake.cpp  snake.hpp  window.cpp  window.hpp
